react: refact some styles in project

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <div class="container">
             <div class="hero__content">
          
-                <h1 class="title hero__title wow animate__animated animate__fadeInRight">Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону</span></h1>
-                <p class="hero__text wow animate__animated animate__fadeInRight">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
-                <button class="button hero__button button--primary wow animate__animated animate__fadeInRight" data-toggle="modal">Рассчитать стоимость</button>
-                <button class="button button--outline hero__button wow animate__animated animate__fadeInRight" style="padding: 18px 45px">Отправить заявку</button>
+                <h1 class="title hero__title wow animate__animated fadeInRight">Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону</span></h1>
+                <p class="hero__text wow animate__animated animate__fadeInRight" data-wow-delay="0.2s">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
+                <button class="button hero__button button--primary wow animate__animated animate__fadeInRight" data-toggle="modal"  data-wow-delay="0.4s">Рассчитать стоимость</button>
+                <button class="button button--outline hero__button wow animate__animated animate__fadeInRight"  data-wow-delay="0.5s" style="padding: 18px 45px">Отправить заявку</button>
              
             </div>
         </div>
@@ -724,12 +724,12 @@
                             <!-- Additional required wrapper -->
                             <div class="swiper-wrapper swiper-no-swiping">
                               <!-- Slides -->
-                              <div class="swiper-slide"><img src="./img/step1.jpg" alt="" class="step-img"></div>
-                              <div class="swiper-slide"><img src="./img/step2.jpg" alt="" class="step-img"></div>
-                              <div class="swiper-slide"><img src="./img/step3.jpg" alt="" class="step-img"></div>
-                              <div class="swiper-slide"><img src="./img/step4.jpg" alt="" class="step-img"></div>
-                              <div class="swiper-slide"><img src="./img/step5.jpg" alt="" class="step-img"></div>
-                              <div class="swiper-slide"><img src="./img/step6.jpg" alt="" class="step-img"></div>
+                              <div class="swiper-slide"><img src="./img/steps_swipe.png" alt="" class="step-img"></div>
+                              <div class="swiper-slide"><img src="../img/steps_swipe.png" alt="" class="step-img"></div>
+                              <div class="swiper-slide"><img src="../img/steps_swipe.png" alt="" class="step-img"></div>
+                              <div class="swiper-slide"><img src="../img/steps_swipe.png" alt="" class="step-img"></div>
+                              <div class="swiper-slide"><img src="../img/steps_swipe.png" alt="" class="step-img"></div>
+                              <div class="swiper-slide"><img src="../img/steps_swipe.png" alt="" class="step-img"></div>
                             </div>
                           </div>
                     </div>
@@ -824,7 +824,7 @@
         <!-- /.section team -->
         <section class="section feedback">
             <div class="container">
-                <div class="section-title types__section-title">
+                <div class="section-title feedback__section-title">
                     <h2 class="section-title__heading">Наши клиенты</h2>
                     <!-- /.section-title__heading -->
                     <div class="section-title__image">
@@ -839,7 +839,7 @@
                         <div class="feedback-item ">
                             <div class="feedback-item__title">
                                 <img src="./img/client-photo-1.png" alt="фото клиента" class="feedback-item__img">
-                                <h3 class="card__title">Савельева <br> Екатерина Львовна</h3>
+                                <h3 class="card__title">Савельева Екатерина&nbsp;Львовна</h3>
                             </div>
                             <p class="feedback-item__text">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарна, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Цены демократические. Я рекомендую этих мастеров.</p>
                         </div>
@@ -860,7 +860,7 @@
                         <div class="feedback-item">
                             <div class="feedback-item__title">
                                 <img src="./img/client-photo-2.png" alt="фото клиента" class="feedback-item__img">
-                                <h3 class="card__title">Большов Михаил Анатольевич</h3>
+                                <h3 class="card__title" style="margin-bottom: -0.4rem;">Большов Михаил Анатольевич</h3>
                             </div>
                             <p class="feedback-item__text">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарна, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Цены демократические. Я рекомендую этих мастеров.</p>
                         </div>
@@ -868,11 +868,11 @@
                         <div class="feedback-item__data">
                             <div class="feedback-square">
                                 <img src="./img/square.svg" alt="площадь" class="feedback__img">
-                                <p class="feedback__text">40 m<sup>2</sup></p>
+                                <p class="feedback__text">90 м<sup>2</sup></p>
                             </div>
-                            <div class="feedback-days">
+                            <div class="feedback-days" style="padding-right: 1.2rem;">
                                 <img src="./img/calendar.svg" alt="календарь" class="feedback__img">
-                                <p class="feedback__text">48 дней</p>
+                                <p class="feedback__text">128 дней</p>
                             </div>
                         </div>
                     </div>
@@ -881,7 +881,7 @@
                         <div class="feedback-item">
                             <div class="feedback-item__title">
                                 <img src="./img/client-photo-3.png" alt="фото клиента" class="feedback-item__img">
-                                <h3 class="card__title">Хасанов Даниил Муратович</h3>
+                                <h3 class="card__title" style="margin-bottom: -0.4rem;">Хасанов Даниил Муратович</h3>
                             </div>
                             <p class="feedback-item__text">Я хочу поблагодарить ребят за их работу. Они вложили душу в ремонт. Я очень благодарна, что сделали как для самих себя. Большое спасибо, я выражаю проектному менеджеру за его профессионализм и подход. Процесс ремонта был завершен быстрее, чем ожидалось. Команда мобильная и профессиональная. Работы выполнены качественно без нареканий. Цены демократические. Я рекомендую этих мастеров.</p>
                         </div>
@@ -889,11 +889,11 @@
                         <div class="feedback-item__data">
                             <div class="feedback-square">
                                 <img src="./img/square.svg" alt="площадь" class="feedback__img">
-                                <p class="feedback__text">40 m<sup>2</sup></p>
+                                <p class="feedback__text">56 м<sup>2</sup></p>
                             </div>
                             <div class="feedback-days">
                                 <img src="./img/calendar.svg" alt="календарь" class="feedback__img">
-                                <p class="feedback__text">48 дней</p>
+                                <p class="feedback__text">86 дней</p>
                             </div>
                         </div>
                     </div>
