--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repair Design Project</title>    
-    <link rel="stylesheet" href="css/animate.min.css"/>
-    <link rel="stylesheet" href="css/animate.compat.css"/>
+    <link rel="stylesheet" type="text/css" src="css/animate.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/animate.compat.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
@@ -209,15 +209,15 @@
                 <form action="#" class="form control__form">
                     <div class="control__input-group">
                         <label for="user-name" class="label form__label control__label label--dark">Имя</label>
-                        <input type="text" class="input from__input control__input" id="user-name" name="userName" placeholder="Как вас зовут:">
+                        <input type="text" class="input from__input control__input" id="control-user-name" name="userName" placeholder="Как вас зовут:">
                     </div>
                     <div class="control__input-group">
                         <label for="user-phone" class="label form__label control__label label--dark">Телефон</label>
-                        <input type="tel" class="input from__input control__input" id="user-phone" name="userPhone" placeholder="Ваш номер телефона:">
+                        <input type="tel" class="input from__input control__input" id="control-user-phone" name="userPhone" placeholder="Ваш номер телефона:">
                     </div>
                     <button class="button button--primary control__button">Отправить</button>
                     <div class="policy control__policy">
-                        <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
+                        <input type="checkbox" name="policy-checkbox" id="control-policy-checkbox" class="policy__checkbox" checked>
                         <label for="policy-checkbox" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
                     </div>
                     <!-- /.policy -->
@@ -916,18 +916,18 @@
                 <form action="#" class="form footer__form">
                     <div class="input-group footer__input-group">
                         <label for="user-name" class="label form__label label--light">Имя</label>
-                        <input type="text" name="userName" class="input from__input footer__input input--light" id="user-name" placeholder="Как вас зовут:">
+                        <input type="text" name="userName" class="input from__input footer__input input--light" id="footer-user-name" placeholder="Как вас зовут:">
                     </div>
                     <div class="input-group footer__input-group">
                         <label for="user-phone" class="label form__label label--light">Телефон</label>
-                        <input type="tel" name="userPhone" class="input from__input footer__input input--light" id="user-phone" placeholder="Ваш номер телефона:">
+                        <input type="tel" name="userPhone" class="input from__input footer__input input--light" id="footer-user-phone" placeholder="Ваш номер телефона:">
                     </div>
                     <div class="input-group footer__input-group footer__input-group--full-width">
                         <label for="user-question" class="label form__label label--light">Вопрос</label>
-                        <input type="text" name="userQuestion" class="input from__input footer__input input--light" id="user-question" placeholder="Я хочу спросить:">
+                        <input type="text" name="userQuestion" class="input from__input footer__input input--light" id="footer-user-question" placeholder="Я хочу спросить:">
                     </div>
                     <div class="policy footer__policy">
-                        <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
+                        <input type="checkbox" name="policy-checkbox" id="footer-policy-checkbox" class="policy__checkbox" checked>
                         <label for="policy-checkbox" class="policy__label policy__label--center">Я соглашаюсь с обработкой данных</label>
                     </div>
                     <!-- /.policy -->
@@ -936,32 +936,65 @@
                 <!-- /.form footer__form -->
             </div>
             <!-- /.footer-wrap -->
+
+            <h2 class="footer__after__title">Ростов на дону, Торговый центр Plaza
+                Прямой телефон +7 (999) 768 32 99</h2>
+
+            <div class="map footer__map">
+                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa39cab987a93c976a7fb1eafc95f0b6ed0c47fde47284d11b415d61fedf72fd7&amp;width=100%25&amp;height=465&amp;lang=ru_RU&amp;scroll=false"></script>
+            </div>
+
+        </div>
+
+        <div class="footer__menu">
+            <div class="container">
+                <div class="menu">
+                    <div class="logo menu__logo ">Repair Design Project</div>
+                    <nav class="nav menu__nav">
+                        <a href="#" class="nav__item">Главная</a>
+                        <a href="#" class="nav__item">Проэкты</a>
+                        <a href="#" class="nav__item">Замер</a>
+                        <a href="#" class="nav__item">Команда</a>
+                        <a href="#" class="nav__item">Отзывы</a>
+                        <a href="#" class="nav__item">Контакты</a>
+                    </nav>
+                    <!-- /.nav -->
+                    <div class="contacts menu__contacts">
+                        <a href="tel:+79997683299" class="phone contacts__phone">
+                            +7 (999) 768-32-99
+                        </a>
+                        <button class="button contacts__button button--primary" data-toggle="modal" stylee="padding: 11px 25px">
+                            Заказать звонок
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
     <!-- /.footer section section--dark -->
-    <div class="modal">
+    <div class="modal">footer-
         <div class="modal__dialog">
             <button class="modal__close"></button>
             <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами </h3>
-            <form action="" class="form modal__form">
+            <form action="send.php" method="POST" class="form modal__form">
 
                 <div class="input-group modal__input-group">
                     <label for="user-name" class="label form__label label--light">Имя</label>
-                    <input type="text" name="userName" class="input form__input modal__input" id='user-name' placeholder="Как вас зовут:">
+                    <input type="text" name="userName" class="input form__input modal__input" id='modal-user-name' placeholder="Как вас зовут:">
                 </div>
 
                 <div class="input-group modal__input-group">
                     <label for="user-phone" class="label form__label label--light">Телефон</label>
-                    <input type="tel" name="userPhone" class="input form__input modal__input" id='user-phone' placeholder="Ваш номер телефона:">
+                    <input type="tel" name="userPhone" class="input form__input modal__input" id='modal-user-phone' placeholder="Ваш номер телефона:">
                 </div>
 
                 <div class="input-group modal__input-group">
                     <label for="user-email" class="label form__label label--light">Email</label>
-                    <input type="email" name="userEmail" class="input form__input  modal__input" id='user-email' placeholder="Ваш email">
+                    <input type="email" name="userEmail" class="input form__input  modal__input" id='modal-user-email' placeholder="Ваш email">
                 </div>
 
                 <div class="policy modal__policy">
-                    <input type="checkbox" name="policy-checkbox" class="policy__checkbox" id="policy-checkbox" checked>
+                    <input type="checkbox" name="policy-checkbox" class="policy__checkbox" id="modal-policy-checkbox" checked>
                     <label for="policy-checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
                 </div>
                 <button class="button button--primary modal__button">отправить заявку</button>
