--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
+    <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+ 
+    ym(87512139, "init", {
+         clickmap:true,
+         trackLinks:true,
+         accurateTrackBounce:true,
+         webvisor:true
+    });
+ </script>
+ <noscript><div><img src="https://mc.yandex.ru/watch/87512139" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+ <!-- /Yandex.Metrika counter -->
+ 
     <header class="header animate__animated animate__fadeInDown">
         <div class="container">
             <div class="menu ">
@@ -32,7 +48,7 @@
                     <a href="tel:+79997683299" class="phone contacts__phone">
                         +7 (999) 768-32-99
                     </a>
-                    <button class="button contacts__button button--primary" data-toggle="modal" stylee="padding: 11px 25px">
+                <button class="button contacts__button button--primary" data-toggle="modal" stylee="padding: 11px 25px">
                         Заказать звонок
                     </button>
                 </div>
