react: new ajax code in mian.js fix send.php

--- a/index.html
+++ b/index.html
@@ -357,7 +357,13 @@
             <!-- /.container -->
         </section>
         <!-- /.section types -->
-
+        <section class="section plan">
+            <div class="container">
+                
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section plan -->
         <section class="section types">
             <div class="container">
                 <div class="section-title types__section-title" style="margin-bottom: 3.6rem;">
