react: end options

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <!-- /.col-50 -->
                 <div class="col-50">
                       <!-- Slider main container -->
-                      <div class="swiper wow animate__animated animate__fadeInRight" data-wow-delay="0.5s" style="width: 120%; margin-left: -4.5rem; margin-top: 2rem;">
+                      <div class="swiper wow animate__animated animate__fadeInRight" data-wow-delay="0.5s" style=" margin-top: 2rem;">
                         <!-- Additional required wrapper -->
                         <div class="swiper-wrapper swiper-no-swiping">
                           <!-- Slides -->
@@ -412,11 +412,11 @@
         <section class="section styles">
             <div class="container">
                 <div class="row">
-                    <div class="col wow animate__animated animate__fadeInLeft" data-wow-delay="0.3s">
+                    <div class="col styles__col__l wow animate__animated animate__fadeInLeft" data-wow-delay="0.3s">
                         <div class="section-title section-title--left">
                             <h2 class="section-title__heading section-title__heading--primary">Мы реализуем ваши самые смелые фантазии</h2>
                             <!-- /.section-title__heading -->
-                            <img src="./img/webp/styles-bg.webp" alt="fantasy" class="section-title__img">
+                            <img src="./img/styles-bg.png" alt="fantasy" class="section-title__img">
                         </div>
                         <!-- /.section-title -->
                         
@@ -438,16 +438,16 @@
                         <!-- /.styles-list -->
                     </div>
                     <!-- /.col -->
-                    <div class="col">
+                    <div class="styles__col col">
                         <div class="row">
                             <div class="col col-1 wow animate__animated animate__fadeInRight" data-wow-delay="0.3s">
-                                <img src="./img/webp/style-1.webp" alt="Стиль 1" class="styles-img">
-                                <img src="./img/webp/style-2.webp" alt="Стиль 2" class="styles-img">
+                                <img src="./img/style-1.png" alt="Стиль 1" class="styles-img">
+                                <img src="./img/style-2.png" alt="Стиль 2" class="styles-img">
                             </div>
                             <!-- /.col -->
                             <div class="col col-2 wow animate__animated animate__fadeInRight" data-wow-delay="0.5s">
-                                <img src="./img/webp/style-3.webp" alt="Стиль 3" class="styles-img">
-                                <img src="./img/webp/style-4.webp" alt="Стиль 4" class="styles-img">
+                                <img src="./img/style-3.png" alt="Стиль 3" class="styles-img">
+                                <img src="./img/style-4.png" alt="Стиль 4" class="styles-img">
                             </div>
                             <!-- /.col -->
                         </div>
